# dynamic_wallpaper

./: Cargo.toml  README.md  com.xsuto.dynamic_wallpaper.plist  com.xsuto.dynamic_wallpaper_debug.plist
src/: api.rs  day_info.rs  main.rs  wallpaper.rs
