[package]
name = "dynamic_wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
dirs = "4.0.0"
log = "0.4.17"
rand = "0.8.5"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
simplelog = "0.12.0"
